# sample_shaka_player_embedded

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
